fix(archive_filter): column actions have a max height to prevent layout issues

--- a/app/client/stylesheets/components/pu-columnslayoutaction.sass
+++ b/app/client/stylesheets/components/pu-columnslayoutaction.sass
@@ -2,6 +2,7 @@
     color: #999
     font-size: 15px
     margin-top: 8px
+    max-height: 40px
 
     a
         color: #999
